# AGC-EMULATOR

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  LICENSE  README.md  agc  agc_main  test_basic
Testing/Temporary/: CTestCostData.txt
bridge/: CMakeLists.txt  agc_jni.c  agc_jni.h
core/: CMakeLists.txt
core/include/: agc.h  agc_cpu.h  agc_instructions.h  agc_memory.h  agc_types.h
core/src/: agc.c  agc_cpu.c  agc_debug.c  agc_instructions.c  agc_memory.c  main.c
core/tests/: test_basic.c
tests/: test_basic.c
